--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -5,7 +5,9 @@
 }
 
 body {
-  font-family: "Story+Script", sans-serif;
+  font-family: "Story Script", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .header-svg {
@@ -24,13 +26,13 @@ body {
 }
 
 .header-svg-content h1 {
-  font-size: 3rem;
+  font-size: 6rem;
   margin: 0;
   font-weight: 700;
 }
 
 .header-svg-content h4 {
-  font-size: 1.5rem;
+  font-size: 3rem;
   margin-top: 10px;
   opacity: 0.9;
 }
@@ -86,7 +88,12 @@ main {
 .about-text h2 {
   color: #0047ab;
   margin-top: 0;
-  font-size: 1.8rem;
+  font-size: 3rem;
+}
+
+.about-text p {
+  font-size: 1.5rem;
+  line-height: 1.8;
 }
 
 .section-exercice {
